--- a/Css/Style.css
+++ b/Css/Style.css
@@ -496,8 +496,8 @@ background: #AAAAAA;
 
 #Conteudo_contatos{
   padding: 5px 0; 
-  /*width: 96%;*/
-    height:67%;
+  width: 212.9vh;
+    height:91vh;
     /*margin-top: 5%;
     margin-bottom: 2%;
   margin-left: 2%;
@@ -512,6 +512,15 @@ background: #AAAAAA;
     flex-direction: column;
     text-align: center;
 
+}
+
+#Conteudo_Contatos_topo{
+  background-color: #364248;
+  margin-left: 25vw;
+  margin-top: -2.5vh;
+  width: 50vw;
+  height: 70vh;
+  padding-top: 2vh;
 }
 
 #Conteudo_Quem_somos{
@@ -700,18 +709,6 @@ h3.rodape{
   color: white;
 }
 
-@media(max-width: 600px){  
-
-    a {
-      font-size: 2vw/*1.30vw*/;
-      
-    }
-      a.botao_Quem_somos{
-      background-color: blue;
-      
-    }
-}
-
 /*============================================================================================================*/
 
 * {
@@ -837,11 +834,6 @@ label:after {
 
 
 
-//codepen用 reset
+
 /**{box-sizing: border-box;}body{font-family:sans-serif;padding-top: 100px;width:100vw;background-color:#999;}*/
 
-
-
-
-
- 
