--- a/Css/Style.css
+++ b/Css/Style.css
@@ -1,3 +1,20 @@
+.desktop {
+  display: block;
+}
+
+.mobile {
+  display: none;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .desktop {
+    display: none;
+  }
+  .mobile {
+    display: block;
+  }
+}
+
 html{
   padding: 0 0;
 
