--- a/Css/Style - mobile.css
+++ b/Css/Style - mobile.css
@@ -356,7 +356,7 @@ a.botao_Quem_somos:hover{
 }
 #Conteudo_par_Vantagens_Titulo{
   width: Calc( 41.5vh + 41.5vw );
-  height: Calc( 33vh + 33vw );
+  height:  55vh;
 margin-left: Calc( 0.3vh + 0.3vw );
   padding-top: 1%;
   border-left: -6%;
