--- a/Css/Style.css
+++ b/Css/Style.css
@@ -292,6 +292,7 @@ border-width: 0.02%;
    margin-left: 7%;
    border-radius: 5%;
    /*background: pink;*/
+   background: rgb(184, 134, 11, 0.5);
    display: flex;
     flex-wrap: wrap;
     justify-content: center;
