--- a/Css/Style.css
+++ b/Css/Style.css
@@ -422,6 +422,10 @@ background: #AAAAAA;
     
 
 }
+Conteudo_par_Titulo_Segmentos_inferior:hover{
+  border-radius: 10%;
+background: #AAAAAA;
+}
 #Titulo_Servicos{
    padding: 5px 0;  
    margin-bottom: -1vh;
