--- a/Css/Style.css
+++ b/Css/Style.css
@@ -158,7 +158,7 @@ html, body {
   text-align: left;
    /*background: #FFFFEE;*/
   /*background: linear-gradient(red, darkred);*/
-    font-size: calc(5vh + 5vw);
+    font-size: calc(0.30em + 0.5vw);
     text-indent: 3ch;
   /* display: flex;
     flex-wrap: wrap;
@@ -169,7 +169,7 @@ html, body {
 }
 p.Carroussel{
   text-align: left;
-  font-size: calc(5vh + 2vw);
+  font-size: calc(0.30em + 0.5vw);
   color: white;
 }
 #Separador_Esq_carroussel{
