--- a/Css/Style.css
+++ b/Css/Style.css
@@ -158,7 +158,7 @@ html, body {
   text-align: left;
    /*background: #FFFFEE;*/
   /*background: linear-gradient(red, darkred);*/
-    font-size: calc(0.450em + 0.450vw);
+    font-size: calc(0.480em + 0.480vw);
     text-indent: 3ch;
   /* display: flex;
     flex-wrap: wrap;
@@ -169,7 +169,8 @@ html, body {
 }
 p.Carroussel{
   text-align: left;
-  font-size: calc(0.450em + 0.450vw);
+  font-size: calc(0.480em + 0.480vw);
+  font-family:'Mulish', sans-serif;
   color: white;
 }
 #Separador_Esq_carroussel{
