--- a/Css/Style.css
+++ b/Css/Style.css
@@ -159,7 +159,7 @@ html, body {
   text-align: left;
    /*background: #FFFFEE;*/
   /*background: linear-gradient(red, darkred);*/
-    font-size: calc(0.480em + 0.480vw);
+    font-size: calc(0.480vh + 0.480vw);
     text-indent: 3ch;
   /* display: flex;
     flex-wrap: wrap;
