--- a/Css/Style.css
+++ b/Css/Style.css
@@ -170,7 +170,8 @@ html, body {
 }
 p.Carroussel{
   text-align: left;
-  font-size: calc(0.480vh + 0.480vw);
+  /*font-size: calc(0.480vh + 0.480vw);*/
+  font-size: 2px;
   font-family:'Mulish', sans-serif;
   color: white;
 }
