--- a/Css/Style.css
+++ b/Css/Style.css
@@ -157,7 +157,7 @@ html, body {
   width: 50%;
   height:80%;
   text-align: left;
-   background: #FFFFEE;
+   /*background: #FFFFEE;*/
   /*background: linear-gradient(red, darkred);*/
     font-size: calc(0.480vh + 0.480vw);
     text-indent: 3ch;
@@ -171,7 +171,7 @@ html, body {
 p.Carroussel{
   text-align: left;
   /*font-size: calc(0.480vh + 0.480vw);*/
-  font-size: 2px;
+  font-size: 2rem;
   font-family:'Mulish', sans-serif;
   color: white;
 }
