--- a/Css/Style.css
+++ b/Css/Style.css
@@ -157,7 +157,7 @@ html, body {
   width: 20%;
   height:80%;
   text-align: left;
-   background: #FFFFBB;
+   /*background: #FFFFBB;*/
   /*background: linear-gradient(red, darkred);*/
     font-size: calc(0.480vh + 0.480vw);
     text-indent: 3ch;
