--- a/Css/Style.css
+++ b/Css/Style.css
@@ -32,6 +32,7 @@ html, body {
   margin: 0;
   padding: 0;
   /*background: black;*/
+   width: 99vw;
   background: linear-gradient(red, darkred, black);
 }
 
