--- a/Css/Style.css
+++ b/Css/Style.css
@@ -58,7 +58,7 @@ html, body {
   margin: 0;
     top: 0;
     left: 0;
-    width:  99vw;
+    width:  100%;
     height:7%;
     z-index: 999 !important;
     /*background: #FFFFFF;*/}
