--- a/Css/Style.css
+++ b/Css/Style.css
@@ -622,10 +622,10 @@ background: #AAAAAA;
     position: fixed;
     top: 0;
     right: 0;
-    width: 50%;
+    width: 50vw;
     height:9%;
     z-index: 999 !important;
-    /*background: blueviolet;*/
+    background: blueviolet;
     /*display: flex;*/
     float: right;
     /*: wrap;
