--- a/Css/Style.css
+++ b/Css/Style.css
@@ -621,8 +621,8 @@ background: #AAAAAA;
     margin: 0;
     position: fixed;
     top: 0;
-    right: 0;
-    width: 46vw;
+    right: 2vw;
+    width: 48vw;
     height:9%;
     z-index: 999 !important;
     background: blueviolet;
