--- a/Css/Style.css
+++ b/Css/Style.css
@@ -602,7 +602,7 @@ background: #AAAAAA;
     position: fixed;
     top: 0;
     left: 0;
-    width: 99vw;
+    width: 100%;
     height:9%;
     z-index: 999 !important;
     /*background: #682E86;*/
