--- a/Css/Style - mobile.css
+++ b/Css/Style - mobile.css
@@ -302,6 +302,7 @@ html, body {
   margin: 0;
   padding: 0;
   background: linear-gradient(red, darkred, black);
+  overflow-x: clip;
 }
 
 #header-wrap.Barra_Menu{
