Update Style - mobile.css

--- a/Css/Style - mobile.css
+++ b/Css/Style - mobile.css
@@ -594,7 +594,14 @@ p.index{
   color: white;
   font-size: larger;
 }
+a.Limpo{
 
+}
+a.Limpo:hover{
+ color: white;
+  background-color: unset;
+   text-decoration: unset;
+}
 a.botao{
   margin-left: 17vw;
   font-size: 3vw;
