--- a/Css/Style.css
+++ b/Css/Style.css
@@ -641,7 +641,7 @@ background: #AAAAAA;
     width: 80vw;
     height:9%;
     z-index: 999 !important;
-    background: blueviolet;
+    /*background: blueviolet;*/
     /*display: flex;*/
     float: right;
     /*: wrap;
